src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <label>TransactionType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Date__c</columns>
        <columns>TransactionType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>